[tool.poetry]
name = "beer-meetup-bot"
version = "0.1.0"
description = "Simple bot for creating meetup polls in telegram"
authors = ["octodes <octode@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
